src/app/styles/_custom.scss
/*
To change this license header, choose License Headers in Project Properties.
To change this template file, choose Tools | Templates
and open the template in the editor.
*/
/* 
    Created on : 08-Mar-2016, 12:26:29
    Author     : Amon Jafarbay <amonjafarbay at 22pointsix.co.uk>
*/

//main styles
//=================================

body {
  background: #f5f4f4;
	margin-top: 68px;
}
#container.main-container {
  margin-top:0px;
  padding-top:20px;
}

input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill  {
  background:white;
}

//cards
.cards-container {
	padding:20px;
	background-color: #eee;
}

//toasts 
//===================================

//error fix
body.md-toast-animating { overflow: auto !important; }

md-toast .md-toast-content{
	position:relative;
	md-icon {color:white;}
	.icon-box {position:absolute; display:flex; top:0;left:0;bottom:0;padding:12px;}
};

md-toast {
	&.type .md-toast-content {padding-left:64px;}
	&.success .md-toast-content { .icon-box {background-color:#8FBC8F;} }
	&.warn .md-toast-content {  .icon-box {background-color:#FF6347;} }
	&.info .md-toast-content {  .icon-box {background-color: #FF8C00}  }
	&.delete .md-toast-content {  .icon-box {background-color: #000000}  }
}

//FAB
//=========================================

div[data-ui-view='header'] {position:relative;z-index:999}

.md-fab{
}

#main-toolbar {
  position:fixed;
  top:0;
  padding-bottom:4px;
  /*background-color: lightslategray;*/
  h2 {margin:0;}
  & > .md-toolbar-tools {
    width:90%;
    position: relative;
    z-index:9995;
  }
}

#user-toolbar {
  color:white;
  position: fixed;
  height: 68px;
  width: 100%;
  top: 0;
  z-index: 9990;
  -webkit-transition: z-index 0.3s ease;
  -moz-transition: z-index 0.3s ease;
  -o-transition: z-index 0.3s ease;
  transition: z-index 0.3s ease;
  -webkit-transition-delay: 500ms;
  -moz-transition-delay: 500ms;
  -o-transition-delay: 500ms;
  transition-delay: 500ms;
  &.md-is-open {
    z-index: 9999;
    -webkit-transition-delay: 00ms;
    -moz-transition-delay: 00ms;
    -o-transition-delay: 00ms;
    transition-delay: 00ms;
  }
  h1,h2,h3,h4,h5 {color:white}
  a {color:#777}
  /*&.md-is-open {width:100%;right:auto;}*/
}

//input edits
md-autocomplete[md-floating-label] md-input-container {
  padding-bottom:0;
}

.add-client-modal {
	overflow-x: hidden;
}

//animations
//========================================
.md-button.md-fab.ng-leave.roll-in {transition: all .3s ease;}

.roll-in {
	
  &.ng-enter, &.ng-leave {
    @extend .transition;
	}
	//animate from
	&.ng-enter, &.ng-leave.ng-leave-active {
    opacity:0;
		-webkit-transform: rotate(180deg);
		-moz-transform: rotate(180deg);
		-o-transform: rotate(180deg);
		-ms-transform: rotate(180deg);
		transform: rotate(180deg);
		margin-right:-50px;
	}
	//end state animation
  &.ng-leave,  &.ng-enter.ng-enter-active {
		opacity:1 ;
		-webkit-transform: rotate(0deg);
		-moz-transform: rotate(0deg);
		-o-transform: rotate(0deg);
		-ms-transform: rotate(0deg);
		transform: rotate(0deg);
		margin-right:0;
	}
}
	
.multi-input-item {
	height:60px;
  &.ng-enter, &.ng-leave {
    @extend .transition;
		position:relative;
		/*display:block;*/
	}
	//animate from
	&.ng-enter {
    opacity: 0;
    top: -40px;
    height: 0px;
		-webkit-transform: scale(.65);
-moz-transform: scale(.65);
-o-transform: scale(.65);
-ms-transform: scale(.65);
transform: scale(.65);

	}
	//end state animation
  &.ng-leave,  &.ng-enter.ng-enter-active {
    opacity: .8;
    top: 0;
    height: 60px;
		-webkit-transform: scale(1);
-moz-transform: scale(1);
-o-transform: scale(1);
-ms-transform: scale(1);
transform: scale(1);

	}
	&.ng-leave.ng-leave-active {
		opacity:0;
		height:0;
		-webkit-transform: scale(.8);
-moz-transform: scale(.8);
-o-transform: scale(.8);
-ms-transform: scale(.8);
transform: scale(.8);
top:40px;
/*		-webkit-transform: translateX(300px);
-moz-transform: translateX(300px);
-o-transform: translateX(300px);
-ms-transform: translateX(300px);
transform: translateX(300px);*/
	}
}

//cssanimate
.animate-repeat.ng-enter-stagger {
  //200ms will be applied between each sucessive enter operation 
  -webkit-transition-delay:0.3s;
  transition-delay:0.3s;

  //this is here to avoid accidental CSS inheritance
  -webkit-transition-duration:0 !important;
  transition-duration:0 !important;
	/* yes we still need to do this too */
   -webkit-animation-duration:0 !important;
   animation-duration:0 !important;
}
.animate-repeat.ng-enter-stagger,
.animate-repeat.ng-leave-stagger,
.animate-repeat.ng-move-stagger {
   //200ms will be applied between each sucessive enter operation  
  -webkit-transition-delay:0.3s;
  transition-delay:0.3s;
	  /* notice how we're using animation instead of transition here */ 
   -webkit-animation-delay:0.3s;
   animation-delay:0.3s;
}

.ngr-fade-in {
	&.ng-enter, &.ng-leave {
		opacity:0;
		@extend .transition;
	}
	&.ng-enter-stagger {
		transition-delay: 30ms;
		transition-duration: 0s;
	}
	&.ng-enter.ng-enter-active, &.ng-leave {
		opacity:1;
	}
}

.ngr-hinge-in {
	&.ng-enter, &.ng-leave {
		opacity:0;
		@extend .transition;
		-webkit-perspective-origin: 50%, 0%;
		-moz-perspective-origin: 50%, 0%;
		-o-perspective-origin: 50%, 0%;
		-ms-perspective-origin: 50%, 0%;
		perspective-origin: 50%, 0%;
		-webkit-transform-origin: 50% 50%;
		-moz-transform-origin: 50% 50%;
		-o-transform-origin: 50% 50%;
		-ms-transform-origin: 50% 50%;
		transform-origin: 50% 50%;
	}
	&.ng-enter-stagger {
		transition-delay: 30ms;
		transition-duration: 0s;
	}
	&.ng-enter.ng-enter-active, &.ng-leave {
		opacity:1;
		transition-duration: .2s;
	}
	&.ng-enter, &.ng-leave-active {
		-webkit-transform: rotateX(-90deg) rotateY(0deg) rotateZ(0deg);
		-moz-transform: rotateX(-90deg) rotateY(0deg) rotateZ(0deg);
		-o-transform: rotateX(-90deg) rotateY(0deg) rotateZ(0deg);
		-ms-transform: rotateX(-90deg) rotateY(0deg) rotateZ(0deg);
		transform: rotateX(-90deg) rotateY(0deg) rotateZ(0deg);
	}
}

.ngr-slide-down{
	&.ng-enter, &.ng-leave {
		opacity:0;
		@extend .transition;
	}
	&.ng-enter-stagger {
		transition-delay: 0.2s;
		transition-duration: 0s;
	}
	&.ng-enter.ng-enter-active, &.ng-leave {
		opacity:1;
		height:48px;
	}
	&.ng-enter, &.ng-leave.ng-leave-active {
		height:0 !important;
		opacity:0;
	}
}

.ngr-default-perspective {
	-webkit-perspective: 500px;
-moz-perspective: 500px;
-o-perspective: 500px;
-ms-perspective: 500px;
perspective: 500px;
}

.roll-left {
	@extend .transition;
	-webkit-transform: rotate(-180deg);
	-moz-transform: rotate(-180deg);
	-o-transform: rotate(-180deg);
	-ms-transform: rotate(-180deg);
	transform: rotate(-180deg);
	
  &.roll-left-active {
		-webkit-transform: rotate(0deg);
		-moz-transform: rotate(0deg);
		-o-transform: rotate(0deg);
		-ms-transform: rotate(0deg);
		transform: rotate(0deg);
  }

}

/*MATERIAL ICONS*/
/*==========================================*/
/* Rules for sizing the icon. */
.material-icons.md-18 { font-size: 18px; }
.material-icons.md-24 { font-size: 24px; }
.material-icons.md-36 { font-size: 36px; }
.material-icons.md-48 { font-size: 48px; }


/* Rules for using icons as black on a light background. */
.material-icons.md-dark { color: rgba(0, 0, 0, 0.54) !important; }
.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26) !important; }

/* Rules for using icons as white on a dark background. */
.material-icons.md-light { color: rgba(255, 255, 255, 1) !important; }
.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3) !important; }

//helper
.wide-min-width {min-width:600px;}

.transition {
  -webkit-transition: all 0.3s ease;
  -moz-transition: all 0.3s ease;
  -o-transition: all 0.3s ease;
  transition: all 0.3s ease;
}

.transition.slow {
  -webkit-transition-duration: .6s;
  -moz-transition-duration: .6s;
  -o-transition-duration: .6s;
  transition-duration: .6s;
}

